@@ -218,53 +218,23 @@ class ExecTestBase(Test):
             timeout = -2
         e = qm.executable.Filter(self.stdin, timeout)
         # Run it.
-        exit_status = e.Run(arguments, environment, path = program)
+        status = e.Run(arguments, environment, path = program)
 
-        # If the process terminated normally, check the outputs.
-        if sys.platform == "win32" or os.WIFEXITED(exit_status):
-            # There are no causes of failure yet.
-            causes = []
-            # The target program terminated normally.  Extract the
-            # exit code, if this test checks it.
-            if self.exit_code is None:
-                exit_code = None
-            elif sys.platform == "win32":
-                exit_code = exit_status
-            else:
-                exit_code = os.WEXITSTATUS(exit_status)
-            # Get the output generated by the program.
-            stdout = e.stdout
-            stderr = e.stderr
-            # Record the results.
-            result["ExecTest.exit_code"] = str(exit_code)
-            result["ExecTest.stdout"] = result.Quote(stdout)
-            result["ExecTest.stderr"] = result.Quote(stderr)
-            # Check to see if the exit code matches.
-            if exit_code != self.exit_code:
-                causes.append("exit_code")
-                result["ExecTest.expected_exit_code"] \
-                    = str(self.exit_code)
-            # Validate the output.
-            causes += self.ValidateOutput(stdout, stderr, result)
-            # If anything went wrong, the test failed.
-            if causes:
-                result.Fail("Unexpected %s." % string.join(causes, ", ")) 
-        elif os.WIFSIGNALED(exit_status):
-            # The target program terminated with a signal.  Construe
-            # that as a test failure.
-            signal_number = str(os.WTERMSIG(exit_status))
-            result.Fail("Program terminated by signal.")
-            result["ExecTest.signal_number"] = signal_number
-        elif os.WIFSTOPPED(exit_status):
-            # The target program was stopped.  Construe that as a
-            # test failure.
-            signal_number = str(os.WSTOPSIG(exit_status))
-            result.Fail("Program stopped by signal.")
-            result["ExecTest.signal_number"] = signal_number
-        else:
-            # The target program terminated abnormally in some other
-            # manner.  (This shouldn't normally happen...)
-            result.Fail("Program did not terminate normally.")
+        causes = []
+        # Validate the exit status.
+        if not result.CheckExitStatus('ExecTest.', 'Program',
+                                      status, self.exit_code):
+            causes.append("exit_code")
+            result["ExecTest.expected_exit_code"] = str(self.exit_code)
+
+        result["ExecTest.stdout"] = result.Quote(e.stdout)
+        result["ExecTest.stderr"] = result.Quote(e.stderr)
+
+        # Validate the output.
+        causes += self.ValidateOutput(e.stdout, e.stderr, result)
+        # If anything went wrong, the test failed.
+        if causes:
+            result.Fail("Unexpected %s." % string.join(causes, ", ")) 
 
 
     def __CompareText(self, s1, s2):
